--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
+    "tsc": " ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
