homepage change for older link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "giothh",
-  "homepage": "https://giothh.github.io/giothh.github.io",
+  "homepage": "https://giothh.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
