--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-/node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-yarn-error.log
-yarn.lock
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/clipboard.txt
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
