--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "giothh",
-  "homepage": "https://giothh.github.io/",
+  "homepage": "https://giothh.github.io/giothh/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
