--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "deploy_2": "gh-pages -b main -d build",
+    "deploy2": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
