--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "giothh",
-  "homepage": "https://giothh.github.io/giothh/",
+  "homepage": "https://giothh.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,7 +30,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "deploy_2": "gh-pages -b main -d build",
+    "deploy2": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
